Changes to support admin endpoint to assign orders to service providers.
